@@ -5,6 +5,7 @@
 * Tweak - Remove `_wcstripe_feature_upe` flag and all traces of old settings.
 * Fix - Fixed unhandled php error when invalid card is used on Pay Order page.
 * Fix - Fixed bug that would send outdated data when using Blocks Checkout.
+* Add - List of payment methods that are not included for the merchant.
 
 = 5.8.1 - 2021-11-23 =
 * Fix - Run filters that disable Stripe JS on cart and product pages when PRBs are disabled.
